# templaer

./: .flake8  .gitignore  pyproject.toml  readme.md
st/dajngo_app_swagger/: swagger.yaml
st/django/: .env  пример_context.jsonc
st/django/django_proj/: Dockerfile.tpl  Makefile  requirements.txt
st/django/django_proj/conf/: settings.py
st/django_app/: apps.py.tpl  urls.py  views.py  пример_context.jsonc
st/django_project/: .editorconfig  .env  .gitignore  Makefile  docker-compose.yml  пример_context.jsonc
st/django_project/django/: Dockerfile.tpl  Makefile  helper_dj.py  manage.py  pyproject.toml
st/django_project/django/api/: admin.py  models.py  urls.py  views.py
st/django_project/django/conf/: settings.py  urls.py
st/django_project/nginx/: nginx.conf.tpl
st/py_proj/: pyproject.toml  пример_context.jsonc
standart_template/django_tpl/: .gitignore  docker-compose.yml  пример_context.json
standart_template/django_tpl/django_proj/: pyproject.toml
standart_template/django_tpl/django_proj/api/: urls.py
standart_template/django_tpl/django_proj/conf/: settings.py  urls.py
standart_template/django_tpl/nginx/: nginx.conf.tpl
templaer/: __init__.py  __main__.py  helper.py  mainlib.py  pypars.py  readme.md
