[tool.poetry]
name = "templaer"
version = "0.1.6.2"
description = "Templaer - универсальный CLI шаблонизатор конфигурационных файлов, основанный на Jinja2"
authors = ["Denis <pro-progerkustov@yandex.ru>"]
license = "Apache-2.0"
homepage = "https://github.com/denisxab/templaer"
repository = "https://github.com/denisxab/templaer"
readme = "./templaer/readme.md"
keywords = ["template","jinja2"]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119
# Put imports of Django and Django Rest Framework in own sections.
sections = ["FUTURE","STDLIB","THIRDPARTY","DRF","DJANGO","FIRSTPARTY","LOCALFOLDER"]
known_drf = "rest_framework"
known_django = "django"
