[tool.poetry]
name = "NAME"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# readme = "README.md"
packages = [{include = "NAME"}]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
autoflake = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119
# Put imports of Django and Django Rest Framework in own sections.
sections = ["FUTURE","STDLIB","THIRDPARTY","DRF","DJANGO","FIRSTPARTY","LOCALFOLDER"]
known_drf = "rest_framework"
known_django = "django"
