[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
# readme = "README.md"
packages = [{include = "proj"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
daphne = "^4.0.0"
djangorestframework = "^3.14.0"
pytz = "^2022.7.1"
psycopg2-binary = "^2.9.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119
# Put imports of Django and Django Rest Framework in own sections.
sections = ["FUTURE","STDLIB","THIRDPARTY","DRF","DJANGO","FIRSTPARTY","LOCALFOLDER"]
known_drf = "rest_framework"
known_django = "django"
